# performance_mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt  server.py
.cursor/rules/: trigger-rule.mdc
performace_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pysrc/: db_utils.py  git_tools.py  jenkins.py  sheets_utils.py
