[project]
name = "performace-mcp"
version = "0.1.0"
description = "MCP for automatic perfomance testing workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.3",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]
